# sam-python-lambda-layers-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.yaml
events/: response.json
hello_world/: app.py  requirements.txt
layers/project_layer/python/project_modules/: module.py  requirements.txt
tests/unit/: test_handler.py
