[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["layers/project_layer/python/"]
include = ["project_modules"]

[project]
name = "project_modules"
requires-python = ">= 3.12"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "aws-lambda-powertools",
    "boto3",
    "result",
]

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "mypy",
    "pre-commit",
    "pytest",
]

